--- a/index.html
+++ b/index.html
@@ -9974,8 +9974,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200214185311337" modified="20200214210205627" title="$:/temp/search" revision="46" bag="default">
-<pre>extensions</pre>
+<div created="20200214185311337" modified="20200214211955283" title="$:/temp/search" revision="47" bag="default">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
