--- a/index.html
+++ b/index.html
@@ -177,11 +177,7 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/Excise/--720480603/tagnew</li>
-
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
+<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -9903,14 +9899,8 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200217001409843" modified="20200217001409843" title="$:/state/Excise/--720480603/tagnew" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200217003350569" modified="20200217003350569" title="$:/state/showeditpreview" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200217001612541" modified="20200217005337273" title="$:/state/sidebar" revision="6" bag="default">
-<pre>yes</pre>
+<div created="20200217194619581" modified="20200217194619582" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9924,7 +9914,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200217000603353" list="[[TD(lamda) Learning]]" modified="20200217003202406" title="$:/StoryList" revision="39" bag="default">
+<div created="20200217194620663" list="" modified="20200217194620663" title="$:/StoryList" revision="5" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -11809,7 +11799,7 @@ Bellman equation can be expressed concisely using matrices: https://imgur.com/n1
 <div author="Siddharth Joshi" created="20191126064803358" modified="20191126072901553" tags="incomplete philosophy logic" title="Model Theory" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>https://plato.stanford.edu/entries/model-theory/</pre>
 </div>
-<div created="20200215211354531" modified="20200217003200264" tags="[[reinforcement learning]]" title="Model-Free Prediction" type="text/vnd.tiddlywiki" revision="7" bag="default">
+<div created="20200215211354531" modified="20200217003201411" tags="[[reinforcement learning]]" title="Model-Free Prediction" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Recap of [[Reinforcement Learning: David Silver Course]] so far:
 
 * [[Planning by Dynamic Programming]] - solve a known MDP by first doing prediction then control
@@ -12619,7 +12609,7 @@ Prefer Standardization when:
 * There are extreme outliers that would make normalization force most values into a tiny range
 * If the distribution is similar to the normal distribution (and thus typically unsupervised algorithms benefit from standardization as many naturally occurring distributions resemble the normal distribution</pre>
 </div>
-<div created="20200217003158071" modified="20200217005330949" tags="[[reinforcement learning]] [[Model-Free Prediction]]" title="TD(lamda) Learning" revision="4" bag="default">
+<div created="20200217003158071" modified="20200217005332107" tags="[[reinforcement learning]] [[Model-Free Prediction]]" title="TD(lamda) Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>n-step Prediction - https://imgur.com/QU5Yfkh - instead of taking one real step and then using estimate, use n-steps (as n turns to infinity approaches Monte-Carlo)
 
 n-step return: $$G_t^{(n)} = R_{t+1} + \gamma R_{t+2} + ... + \gamma^n V(S_{t+n})$$
@@ -12666,7 +12656,7 @@ $$\sum_{t=1}^T \alpha \delta_t E_t(s) = \sum_{t=1}^T \alpha(G^\lambda_t -V(S_t))
 
 </pre>
 </div>
-<div created="20200217001417966" modified="20200217002006628" tags="[[Model-Free Prediction]]" title="Temporal-Difference Learning" revision="4" bag="default">
+<div created="20200217001417966" modified="20200217002007781" tags="[[Model-Free Prediction]]" title="Temporal-Difference Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Overview: 
 
 * Learn directly form experience (model-free)
