Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Error message and password prompt
 
 <li>UCLA CS 201 Winter 2020</li>
 
-<li>UCLA CS 262A Learning and Reasoning with Bayesian Networks -</li>
+<li>UCLA CS 262A Learning and Reasoning with Bayesian Networks</li>
 
 <li>UCLA CS M146 - Machine Learning</li>
 
@@ -9926,7 +9926,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200217194620663" list="[[Extreme Classification: Algorithms &amp; Evaluation by Yashoteja Prabhu]]" modified="20200217194620663" title="$:/StoryList" revision="11" bag="default">
+<div created="20200217194620663" list="[[UCLA CS 262A Learning and Reasoning with Bayesian Networks]] [[Extreme Classification: Algorithms &amp; Evaluation by Yashoteja Prabhu]]" modified="20200219024009815" title="$:/StoryList" revision="14" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -12976,7 +12976,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Quantum Temporal Logic by Nengkun Yu]]
 </pre>
 </div>
-<div created="20200212062244378" modified="20200212064151526" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks -" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200212062244378" modified="20200219024017365" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre># [[Historical Perspective on AI]]</pre>
 </div>
 <div created="20200126032331506" modified="20200210191753424" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
