Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9947,7 +9947,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200217194620663" list="[[Topological Spaces]]" modified="20200219071853968" title="$:/StoryList" revision="101" bag="default">
+<div created="20200217194620663" list="[[Combinatorial Optimization Algorithms for Clustering and Machine Learning by Dorith Hochbaum]] [[UCLA CS 201 Winter 2020]] [[Extreme Classification: Algorithms &amp; Evaluation by Yashoteja Prabhu]] [[Topological Spaces]]" modified="20200219081849841" title="$:/StoryList" revision="110" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10008,7 +10008,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200219031428920" modified="20200219080529285" title="$:/temp/search" revision="64" bag="default">
+<div created="20200219031428920" modified="20200219081934108" title="$:/temp/search" revision="71" bag="default">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
@@ -10746,7 +10746,7 @@ Summary: The following statements are equivalent
 * X is totally bounded and complete
 </pre>
 </div>
-<div created="20200219061300673" modified="20200219061302311" tags="topology" title="Compactness of Topological Spaces" revision="1" bag="default">
+<div created="20200219061300673" modified="20200219061303401" tags="topology" title="Compactness of Topological Spaces" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre></pre>
 </div>
 <div created="20200131061156893" modified="20200131161439072" tags="topology [[metric spaces]]" title="Completeness" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -11260,7 +11260,7 @@ Full-width Backups - for each backup every successor state and action is conside
 * Sample backups are an alternative and the advantages are that this is model-free and makes up the cost of backup is constant
 * This is how we convert from Planning to Reinforcement Learning</pre>
 </div>
-<div created="20200219001609341" modified="20200219010932182" tags="[[machine learning]]" title="Extreme Classification: Algorithms &amp; Evaluation by Yashoteja Prabhu" revision="3" bag="default">
+<div created="20200219001609341" modified="20200219081802473" tags="[[talk summary]] [[machine learning]]" title="Extreme Classification: Algorithms &amp; Evaluation by Yashoteja Prabhu" revision="4" bag="default">
 <pre>New area of ML - many large scale ranking &amp; recommendation problem can be reduced to extreme classification
 
 __Introduction to Extreme Classification__
@@ -12824,7 +12824,7 @@ Take proof statement: alpha is the result of executing C for T steps on public i
 First step construct an AIR:
 P = </pre>
 </div>
-<div created="20200219061250949" modified="20200219061252520" tags="topology" title="Separation Axioms" revision="1" bag="default">
+<div created="20200219061250949" modified="20200219061253611" tags="topology" title="Separation Axioms" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre></pre>
 </div>
 <div created="20200203072201259" modified="20200203074407751" tags="[[graph theory]]" title="Similarity Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -13185,10 +13185,13 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 * [[Compactness of Topological Spaces]]
 </pre>
 </div>
-<div created="20200131000351410" modified="20200131051342703" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200131000351410" modified="20200219081932327" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" type="text/vnd.tiddlywiki" revision="2" bag="default">
 <pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]]
 # [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]]
 # [[Quantum Temporal Logic by Nengkun Yu]]
+# [[Reinforcement Learning with Langevin Dynamics]]
+# [[Combinatorial Optimization Algorithms for Clustering and Machine Learning by Dorith Hochbaum]]
+# [[Extreme Classification: Algorithms &amp; Evaluation by Yashoteja Prabhu]]
 </pre>
 </div>
 <div created="20200212062244378" modified="20200219024017365" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks" type="text/vnd.tiddlywiki" revision="1" bag="default">
