Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,10 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/Excise/--157874264/tagnew</li>
-
-<li>$:/state/showeditpreview</li>
-
 <li>$:/state/sidebar</li>
 
 <li>$:/status/IsAnonymous</li>
@@ -9935,13 +9931,7 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200221000543819" modified="20200221000543819" title="$:/state/Excise/--157874264/tagnew" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200220225911292" modified="20200221000753893" title="$:/state/showeditpreview" revision="2" bag="default">
-<pre>no</pre>
-</div>
-<div created="20200220233312049" modified="20200221024203529" title="$:/state/sidebar" revision="4" bag="default">
+<div created="20200221042806535" modified="20200221042807106" title="$:/state/sidebar" revision="2" bag="default">
 <pre>yes</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
@@ -9956,7 +9946,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200220224621315" list="" modified="20200221024121408" title="$:/StoryList" revision="27" bag="default">
+<div created="20200221042407741" list="[[UCLA Math 121 Topology]] [[Topological Spaces]] [[Separation Axioms]]" modified="20200221042808183" title="$:/StoryList" revision="10" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10017,7 +10007,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200220225157631" modified="20200220233315640" title="$:/temp/search" revision="32" bag="default">
+<div created="20200221042401711" modified="20200221042812001" title="$:/temp/search" revision="19" bag="default">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
@@ -10545,7 +10535,7 @@ Proof:
 * Therefore $$x \in clos(X \setminus S)$$ and then by above fact $$x \in \delta S$$
 * Hence $$x \in \bar{S}$$ implies $$x \in int(S)$$ or $$x \in \delta S$$</pre>
 </div>
-<div created="20200221024102392" modified="20200221024138939" tags="[[Value Function Approximation]]" title="Batch Methods of Value Function Approximation" revision="3" bag="default">
+<div created="20200221024102392" modified="20200221024140055" tags="[[Value Function Approximation]]" title="Batch Methods of Value Function Approximation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Batch methods seek to find the best fitting value function given the agent's whole experience
 
 Least Squares Prediction:
@@ -11496,7 +11486,7 @@ Recipe:
 <div created="20200204064724736" modified="20200204064742039" tags="technology" title="IaaS" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Infrastructure as a service (IaaS) are online services that provide high-level APIs used to dereference various low-level details of underlying network infrastructure like physical computing resources, location, data partitioning, scaling, security, backup etc. A hypervisor, such as Xen, Oracle ~VirtualBox, Oracle VM, KVM, VMware ESX/ESXi, or Hyper-V, LXD, runs the virtual machines as guests. Pools of hypervisors within the cloud operational system can support large numbers of virtual machines and the ability to scale services up and down according to customers' varying requirements.</pre>
 </div>
-<div created="20200221000607901" modified="20200221000607901" tags="[[Value Function Approximation]]" title="Incremental Methods of Value Function Approximation" revision="1" bag="default">
+<div created="20200221000607901" modified="20200221000609033" tags="[[Value Function Approximation]]" title="Incremental Methods of Value Function Approximation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Gradient Descent: https://imgur.com/tixxGz3, can also refer to [[Logistic Regression]], [[Regularization and Overfitting]] for a discussion of this
 
 Value Function Approximation by Stochastic Gradient Descent: https://imgur.com/tixxGz3
@@ -13007,7 +12997,7 @@ reduction step 2 - stochastic gradient langevin dynamics (SGLD) - instead of lea
 implementable in entropic mirror descent - hsieh et al 2019
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191125022514242" modified="20200220222323193" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191125022514242" modified="20200221024250114" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Part 1: Elementary Reinforcement Learning
 
 # [[Introduction to Reinforcement Learning]]
@@ -13019,6 +13009,7 @@ implementable in entropic mirror descent - hsieh et al 2019
 Part 2: Reinforcement Learning in Practice
 
 # [[Value Function Approximation]]
+# [[Policy Gradient Methods]]
 
 Link to videos: https://www.youtube.com/watch?v=2pWv7GOvuf0&amp;list=PLzuuYNsE1EZAXYR4FJ75jcJseBmo4KQ9-&amp;fbclid=IwAR0lD-SDq5vtgIlUwb4IQryt6USHNndwB2eI0j7cpyfsPkeESv4Rok5YGhY
 
@@ -13068,13 +13059,13 @@ Take proof statement: alpha is the result of executing C for T steps on public i
 First step construct an AIR:
 P = </pre>
 </div>
-<div created="20200219061250949" modified="20200220213656988" tags="topology" title="Separation Axioms" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200219061250949" modified="20200221042816241" tags="topology" title="Separation Axioms" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>''Intuition:'' To identify topological spaces with enough structure i.e. they do not have too few open sets - this is best characterized by separation axioms that are some form of requirements that pairs of disjoint subsets are contained in disjoint open sets. To require this in full generality though is not helpful either as it requires every set to be open. 
 
 Def: A topological space X is a 
 
-* T1-space: if for each  pair of distinct points $$x, y \in X$$, there exists an open set U containing y s.t $$x \notin U$$. In this case, complement of $$\{x\}$
-* T2-space (''Hausdorff''):  
+* T1-space: if for each  pair of distinct points $$x, y \in X$$, there exists an open set U containing y s.t $$x \notin U$$. In this case, complement of $$\{x\}$$
+* T2-space (''Hausdorff''):  If for every pair of distinct points $$x, y \in X$$, $$\exists U, V$$ open sets s.t. $$x \in U$$ and $$y in V$$ and $$U \cap V = \emptyset$$
 </pre>
 </div>
 <div created="20200203072201259" modified="20200203074407751" tags="[[graph theory]]" title="Similarity Measures" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -13516,7 +13507,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Models of Networks]]
 </pre>
 </div>
-<div created="20200220222338216" modified="20200221024118506" tags="[[reinforcement learning]]" title="Value Function Approximation" type="text/vnd.tiddlywiki" revision="7" bag="default">
+<div created="20200220222338216" modified="20200221024119660" tags="[[reinforcement learning]]" title="Value Function Approximation" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__Why do we need to approximate the value function - deal with large scale RL programs:__
 
 * Backgammon: $$10^{20}$$ states
